<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest01</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">email</string>
    <string name="phone">Phone</string>
    <string name="navigate">Navigate to secondary activity</string>
    <string name="title_activity_practical_test01_secondary">PracticalTest01SecondaryActivity</string>
    <string name="PhoneState">Phone Validation</string>
    <string name="EmailState">Email Validation</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>

</resources>
