<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest01.PracticalTest01MainActivity"
    android:orientation="vertical" >

    <GridLayout
        android:id="@+id/grid"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="2"
        android:alignmentMode="alignMargins">
      
        <EditText
            android:id="@+id/email"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="top|left"
            android:layout_row="0"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:saveEnabled="false" />
        
        <CheckBox
            android:id="@+id/check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:checked="false"
            android:enabled="false" />
        
        <EditText
            android:id="@+id/phone"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="top|left"
            android:layout_row="1"
            android:hint="@string/phone"
            android:inputType="phone" 
            android:saveEnabled="false"           
            />
        
        <CheckBox
            android:id="@+id/check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:checked="false"
            android:enabled="false" />
                
    </GridLayout>
    
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/navigate" />

</LinearLayout>
